chore: remove unused plugin