@@ -1,4 +1,3 @@
-import net.razvan.JacocoToCoberturaTask
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 
 plugins {
@@ -7,26 +6,24 @@ plugins {
   alias(libs.plugins.dokka)
   alias(libs.plugins.kover)
   alias(libs.plugins.kotest)
-  alias(libs.plugins.jacocoToCobertura)
-  alias(libs.plugins.changelog)
   alias(libs.plugins.ktfmt)
   alias(libs.plugins.detekt)
 }
 
 dependencies {
-  implementation(kotlin("stdlib"))
+  compileOnly(kotlin("stdlib"))
 
-  implementation(libs.kotlinx.datetime)
-  implementation(libs.protobuf.kotlin)
-  implementation(libs.jakarta.validation.api)
-  implementation(libs.bson)
-  implementation(libs.spring.data.mongodb)
-  implementation(libs.bundles.kotlinx.coroutines)
-  implementation(libs.kotlinCsv)
-  implementation(libs.kotlinLogging)
-  implementation(libs.bundles.jackson.modules)
-  implementation(libs.reactor.core)
-  implementation(libs.bundles.temporal)
+  compileOnly(libs.kotlinx.datetime)
+  compileOnly(libs.protobuf.kotlin)
+  compileOnly(libs.jakarta.validation.api)
+  compileOnly(libs.bson)
+  compileOnly(libs.spring.data.mongodb)
+  compileOnly(libs.bundles.kotlinx.coroutines)
+  compileOnly(libs.kotlinCsv)
+  compileOnly(libs.kotlinLogging)
+  compileOnly(libs.bundles.jackson.modules)
+  compileOnly(libs.reactor.core)
+  compileOnly(libs.bundles.temporal)
 
   testImplementation(kotlin("test"))
   testImplementation(libs.bundles.kotest)
@@ -43,41 +40,9 @@ group = "com.bangbang93.nanoda"
 
 version = "0.0.1"
 
-tasks.register<Jar>("sourcesJar") {
-  group = "publishing"
-  description = "Assembles sources jar"
-
-  archiveClassifier.set("sources")
-  from(sourceSets.main.get().allSource)
-}
-
-tasks.register<Exec>("changelog") {
-  group = "documentation"
-  description = "Generate changelog.md from git commits"
-
-  workingDir = project.rootDir
-  commandLine("npx", "auto-changelog", "-v", version.toString(), "--output", "CHANGELOG.md")
-}
-
 tasks.withType<Test>().configureEach { useJUnitPlatform() }
 
-tasks.test {
-  useJUnitPlatform()
-  jvmArgs(
-      "--add-opens",
-      "java.base/java.nio=ALL-UNNAMED",
-      "--add-exports",
-      "java.base/sun.nio.ch=ALL-UNNAMED",
-  )
-  systemProperty("org.slf4j.simpleLogger.defaultLogLevel", "debug")
-}
-
-tasks.withType<JacocoToCoberturaTask> {
-  dependsOn("koverXmlReport")
-  inputFile.set(layout.buildDirectory.file("reports/kover/report.xml"))
-  outputFile.set(layout.buildDirectory.file("reports/kover/cobertura.xml"))
-  sourceDirectories.from(layout.projectDirectory.dir("src/main/kotlin"))
-}
+tasks.test { useJUnitPlatform() }
 
 java {
   sourceCompatibility = JavaVersion.VERSION_21
